// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initPORT should find a port by itself if no env port 1`] = `
Object {
  "logCalls": Array [
    Array [
      "debug",
      "🛂 - Initializing the importer!",
    ],
    Array [
      "debug",
      "🏭 - Initializing the PORT service.",
    ],
    Array [
      "debug",
      "🛂 - Dynamic import of \\"portfinder\\".",
    ],
    Array [
      "warning",
      "✔ - Found a free port \\"8001\\"",
    ],
  ],
}
`;

exports[`initPORT should use the env port first 2`] = `
Object {
  "logCalls": Array [
    Array [
      "debug",
      "🛂 - Initializing the importer!",
    ],
    Array [
      "debug",
      "🏭 - Initializing the PORT service.",
    ],
    Array [
      "warning",
      "♻️ - Using ENV port \\"1337\\"",
    ],
  ],
}
`;
